src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the Contact is an Internal User Contact</description>
        <inlineHelpText>True if the Contact is an Internal User Contact</inlineHelpText>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>IF(Internal__c = True, HYPERLINK(&apos;/ Matching_User__r.Manager.Internal_Contact__c&apos;, Matching_User__r.Manager.FirstName&amp;&quot; &quot;&amp;Matching_User__r.Manager.LastName),&quot;Not an Internal Contact&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The manager of the internal user</inlineHelpText>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User this contact was created for</description>
        <inlineHelpText>The User this contact was created for</inlineHelpText>
        <label>Matching User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>